--- a/indicarprocess/imagery/templates/imagery/scene_detail.html
+++ b/indicarprocess/imagery/templates/imagery/scene_detail.html
@@ -3,7 +3,7 @@
 
 {% block title %}{% trans 'Scene' %} {{ scene.name }}{% endblock title %}
 
-{% block page_title %}<h1>{{ scene.name }}</h1>{% endblock page_title %}
+{% block page_title %}<h1 class="page-header">{{ scene.name }}</h1>{% endblock page_title %}
 
 {% block content %}
   <div class='col-sm-6 col-xs-12'>
