--- a/indicarprocess/catalogo/templates/catalogo/recursos.html
+++ b/indicarprocess/catalogo/templates/catalogo/recursos.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Recursos para uso no QGIS{% endblock title %}
+
 {% block page_title %}<h1>Recursos para uso no QGIS</h1>{% endblock page_title %}
 
 {% block content %}
