--- a/indicarprocess/imagery/templates/imagery/login_page.html
+++ b/indicarprocess/imagery/templates/imagery/login_page.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% load i18n %}
 
+{% block title %}{% trans 'Login' %}{% endblock title %}
 
-{% block page_title %}<h1>{% trans 'Login' %}</h1>{% endblock page_title %}
+{% block page_title %}<h1 class="page-header">{% trans 'Login' %}</h1>{% endblock page_title %}
 
 {% block content %}
   {% if msg %}
