--- a/indicarprocess/imagery/templates/imagery/not_found_scenerequest.html
+++ b/indicarprocess/imagery/templates/imagery/not_found_scenerequest.html
@@ -1,4 +1,6 @@
 {% extends 'imagery/user_scenerequest_list.html' %}
 {% load i18n %}
 
-<h1>{% block page_title %}{% trans 'Not Found Scene Requests' %}{% endblock page_title %}</h1>
+{% block title %}{% trans 'Not Found Scene Requests' %}{% endblock title %}
+
+{% block page_title %}<h1 class="page-header">{% trans 'Not Found Scene Requests' %}</h1>{% endblock page_title %}
