--- a/indicarprocess/templates/404.html
+++ b/indicarprocess/templates/404.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
+{% load i18n %}
 
-{% block title %}Page Not found{% endblock %}
+{% block title %}{% trans 'Page Not found' %}{% endblock %}
 
-{% block page_title %}Page Not found{% endblock page_title %}
+{% block page_title %}<h1 class='page-header'>{% trans 'Page Not found' %}</h1>{% endblock page_title %}
 
 {% block content %}
-  <p>This is not the page you were looking for.</p>
+  <p>{% trans 'We could not find the page you requested. Please review the URL.' %}</p>
 {% endblock content %}
