--- a/indicarprocess/static/css/indicarprocess.css
+++ b/indicarprocess/static/css/indicarprocess.css
@@ -1,5 +1,10 @@
 /*! project specific CSS goes here. */
 
+#map{
+  width: 100%;
+  height: 400px
+}
+
 #barra-brasil .brasil-flag {
   height: 29px !important;
 }
