--- a/indicarprocess/imagery/templates/imagery/scene_list.html
+++ b/indicarprocess/imagery/templates/imagery/scene_list.html
@@ -7,113 +7,141 @@
 {% block page_title %}<h3 class="page-header">{% trans 'Landsat Catalog' %}</h3>{% endblock page_title %}
 
 {% block content %}
-  <button class="btn btn-default margin" type="button" data-toggle="collapse" data-target="#search-form" aria-expanded="false" aria-controls="search-form">
-    {% trans 'Filter Scenes' %}
-  </button>
-  <div class="collapse {% if queries %} in {% endif %}" id="search-form">
-    <form class="form-horizontal formtype">
-      <div class="row form-line">
-        <div class="col-xs-12 col-md-3">
-          <label>{% trans 'Scene' %}</label>
-          <input id="scene" class="form-control" type="text" placeholder="{% trans 'Scene' %}" value="{{ name }}"/>
+  {% include "imagery/filter_map.html" with geojson_url="imagery:geoscene-listview" %}
+    <div class="row margin">
+        <div class="col-md-1 no-padding-left">
+          <button class="btn btn-default"
+                  data-toggle="collapse"
+                  data-target="#search-form"
+                  aria-expanded="false"
+                  aria-controls="search-form">
+                    {% trans 'Filter Scenes' %}
+          </button>
         </div>
-        <div class="col-xs-6 col-md-1">
-          <label>Path</label>
-          <input id="path" class="form-control numberInput" type="number" placeholder="Path" min="0" max="233" value="{{ path }}"/>
+        <div class="col-md-offset-11">
+          <a id="search"
+             class="btn btn-primary"
+             href="{% url 'imagery:index'  %}"
+             search>
+              {% trans 'Search' %}
+          </a>
         </div>
-        <div class="col-xs-6 col-md-1">
-          <label>Row</label>
-          <input id="row" class="form-control numberInput" type="number" placeholder="Row" min="0" max="248" value="{{ row }}"/>
-        </div>
-        <div class="col-xs-6 col-md-2">
-          <label class="pull-center">{% trans 'Satellite' %}</label>
-          <select id="sat" class="form-control" value="{{ sat }}">
-            <option value="" default {% if not sat %} selected="selected" {% endif %}>{% trans 'Satellite' %}</option>
-            <option value="L5" {% if sat == "L5" %} selected="selected" {% endif %}>Landsat 5</option>
-            <option value="L7" {% if sat == "L7" %} selected="selected" {% endif %}>Landsat 7</option>
-            <option value="L8" {% if sat == "L8" %} selected="selected" {% endif %}>Landsat 8</option>
-          </select>
-        </div>
-        <div class="col-xs-6 col-md-2 input-control">
-          <label class="pull-center">{% trans 'Status' %}</label>
-          <select id="status" class="form-control">
-            <option value="" default {% if not status %} selected="selected" {% endif %}>{% trans 'Status' %}</option>
-            <option value="processed" {% if status == "processed" %} selected="selected" {% endif %}>{% trans 'Processed' %}</option>
-            <option value="p_failed" {% if status == "p_failed" %} selected="selected" {% endif %}>{% trans 'Process Failed' %}</option>
-            <option value="processing" {% if status == "processing" %} selected="selected" {% endif %}>{% trans 'Processing' %}</option>
-            <option value="downloaded" {% if status == "downloaded" %} selected="selected" {% endif %}>{% trans 'Downloaded' %}</option>
-            <option value="dl_failed" {% if status == "dl_failed" %} selected="selected" {% endif %}>{% trans 'Download Failed' %}</option>
-            <option value="downloading" {% if status == "downloading" %} selected="selected" {% endif %}>{% trans 'Downloading' %}</option>
-          </select>
-        </div>
-      </div>
-      <div class="row form-line">
-        <div class="col-xs-12 col-md-4">
-          <label class="text-center">{% trans 'Max Cloud Rate' %}</label>
-          <div class="input-group slider-margin">
-            <b>0% </b><input id="cloudRange" type="text" class="span2" value="" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="{{ max_cloud }}" data-slider-tooltip="show"/><b> 100%</b>
-          </div>
-        </div>
-        <div class="col-xs-12 col-md-3">
-          <label>{% trans 'Date' %}</label>
-          <div class="input-group">
-            <input id="startDate" class="form-control" data-provide="datepicker" data-date-orientation="top left" placeholder="{% trans 'Start Date' %}" data-date-autoclose="true" value="{{ start }}" data-date-format="yyyy-mm-dd" data-date-language="{% trans 'en-US' %}">
-            <span class="input-group-addon"> {% trans 'to' %} </span>
-            <input id="endDate" class="form-control" data-provide="datepicker" data-date-orientation="top left" placeholder="{% trans 'End Date' %}" data-date-autoclose="true" data-date-start-date="" value='{{ end }}' data-date-format="yyyy-mm-dd" data-date-language="{% trans 'en-US' %}">
-          </div>
-        </div>
-        <div class="col-lg-2 pull-right">
-          <a id="search" class="btn btn-primary" href="{% url 'imagery:index' %}" search> {% trans 'Search' %}</a>
-        </div>
-      </div>
-    </form>
-  </div>
-
-  {% if scenes %}
-    <div class="table-responsive">
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th>{% trans 'Scene' %}</th>
-            <th>{% trans 'Satellite' %}</th>
-            <th>{% trans 'Cloud Rate' %}</th>
-            <th>{% trans 'Date' %}</th>
-            <th>{% trans 'Status' %}</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for scene in scenes %}
-            <tr>
-              <td><a href="{% url 'imagery:scene' scene.name %}">{{ scene.name }}</a>
-              <td>{{ scene.get_sat_display }}</td>
-              <td>{{ scene.cloud_rate|default_if_none:'--' }}%</td>
-              <td>{{ scene.date|date:"SHORT_DATE_FORMAT" }}</td>
-              <td>{{ scene.get_status_display }}</td>
-            </tr>
-          {% endfor %}
-        </tbody>
-      </table>
     </div>
-  {% else %}
-    <div class="alert alert-danger">{% trans 'No scenes found.' %}</div>
-  {% endif %}
 
-  {% if paginator %}
-    <p class="text-muted text-pagination">
-      {% trans 'Page' %} {{ page_obj.number }} {% trans 'of' %} {{ page_obj.paginator.num_pages }}
-    </p>
-    <ul class="pager">
-      {% if page_obj.has_previous %}
-        <li><a href="?page={{ page_obj.previous_page_number }}&{{ queries.urlencode }}">&larr; {% trans 'Previous' %}</a></li>
-      {% endif %}
+    <div class="collapse {% if queries %} in {% endif %}" id="search-form">
+        <form class="form-horizontal formtype">
+          <div class="row form-line">
+            <div class="col-xs-12 col-md-3">
+              <label>{% trans 'Scene' %}</label>
+              <input id="scene" class="form-control" type="text" placeholder="{% trans 'Scene' %}" value="{{ name }}"/>
+            </div>
+            <div class="col-xs-6 col-md-1">
+              <label>Path</label>
+              <input id="path" class="form-control numberInput" type="number" placeholder="Path" min="0" max="233" value="{{ path }}"/>
+            </div>
+            <div class="col-xs-6 col-md-1">
+              <label>Row</label>
+              <input id="row" class="form-control numberInput" type="number" placeholder="Row" min="0" max="248" value="{{ row }}"/>
+            </div>
+            <div class="col-xs-6 col-md-2">
+              <label class="pull-center">{% trans 'Satellite' %}</label>
+              <select id="sat" class="form-control" value="{{ sat }}">
+                <option value="" default {% if not sat %} selected="selected" {% endif %}>{% trans 'Satellite' %}</option>
+                <option value="L5" {% if sat == "L5" %} selected="selected" {% endif %}>Landsat 5</option>
+                <option value="L7" {% if sat == "L7" %} selected="selected" {% endif %}>Landsat 7</option>
+                <option value="L8" {% if sat == "L8" %} selected="selected" {% endif %}>Landsat 8</option>
+              </select>
+            </div>
+            <div class="col-xs-6 col-md-2 input-control">
+              <label class="pull-center">{% trans 'Status' %}</label>
+              <select id="status" class="form-control">
+                <option value="" default {% if not status %} selected="selected" {% endif %}>{% trans 'Status' %}</option>
+                <option value="processed" {% if status == "processed" %} selected="selected" {% endif %}>{% trans 'Processed' %}</option>
+                <option value="p_failed" {% if status == "p_failed" %} selected="selected" {% endif %}>{% trans 'Process Failed' %}</option>
+                <option value="processing" {% if status == "processing" %} selected="selected" {% endif %}>{% trans 'Processing' %}</option>
+                <option value="downloaded" {% if status == "downloaded" %} selected="selected" {% endif %}>{% trans 'Downloaded' %}</option>
+                <option value="dl_failed" {% if status == "dl_failed" %} selected="selected" {% endif %}>{% trans 'Download Failed' %}</option>
+                <option value="downloading" {% if status == "downloading" %} selected="selected" {% endif %}>{% trans 'Downloading' %}</option>
+              </select>
+            </div>
+          </div>
+          <div class="row form-line">
+            <div class="col-xs-12 col-md-4">
+              <label class="text-center">{% trans 'Max Cloud Rate' %}</label>
+              <div class="input-group slider-margin">
+                <b>0% </b><input id="cloudRange" type="text" class="span2" value="" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="{{ max_cloud }}" data-slider-tooltip="show"/><b> 100%</b>
+              </div>
+            </div>
+            <div class="col-xs-12 col-md-3">
+              <label>{% trans 'Date' %}</label>
+              <div class="input-group">
+                <input id="startDate" class="form-control" data-provide="datepicker" data-date-orientation="top left" placeholder="{% trans 'Start Date' %}" data-date-autoclose="true" value="{{ start }}" data-date-format="yyyy-mm-dd" data-date-language="{% trans 'en-US' %}">
+                <span class="input-group-addon"> {% trans 'to' %} </span>
+                <input id="endDate" class="form-control" data-provide="datepicker" data-date-orientation="top left" placeholder="{% trans 'End Date' %}" data-date-autoclose="true" data-date-start-date="" value='{{ end }}' data-date-format="yyyy-mm-dd" data-date-language="{% trans 'en-US' %}">
+              </div>
+            </div>
+            <!-- Tags to store value defined by map selection and pagination -->
+            <div id="bbox"       display="none" {% if bbox %} value="{{bbox}}" {% else %} value="" {% endif %}></div>
+            <div id="formBounds" display="none" value="" /></div>
+          </div>
 
-      {% if page_obj.has_next %}
-        <li><a href="?page={{ page_obj.next_page_number }}&{{ queries.urlencode }}">{% trans 'Next' %} &rarr;</a></li>
-      {% endif %}
-    </ul>
-  {% endif %}
+        </form>
+    </div>
+
+    {% if scenes %}
+        <div class="table-responsive">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>{% trans 'Scene' %}</th>
+                <th>{% trans 'Satellite' %}</th>
+                <th>{% trans 'Cloud Rate' %}</th>
+                <th>{% trans 'Date' %}</th>
+                <th>{% trans 'Status' %}</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for scene in scenes %}
+                <tr>
+                  <td><a href="{% url 'imagery:scene' scene.name %}">{{ scene.name }}</a>
+                  <td>{{ scene.get_sat_display }}</td>
+                  <td>{{ scene.cloud_rate|default_if_none:'--' }}%</td>
+                  <td>{{ scene.date|date:"SHORT_DATE_FORMAT" }}</td>
+                  <td>{{ scene.get_status_display }}</td>
+                </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
+    {% else %}
+        <div class="alert alert-danger">{% trans 'No scenes found.' %}</div>
+    {% endif %}
+
+    {% if paginator %}
+        <p class="text-muted text-pagination">
+          {% trans 'Page' %} {{ page_obj.number }} {% trans 'of' %} {{ page_obj.paginator.num_pages }}
+        </p>
+        <ul class="pager">
+          {% if page_obj.has_previous %}
+            <li><a href="?page={{ page_obj.previous_page_number }}&{{ queries.urlencode }}">&larr; {% trans 'Previous' %}</a></li>
+          {% endif %}
+
+          {% if page_obj.has_next %}
+            <li><a href="?page={{ page_obj.next_page_number }}&{{ queries.urlencode }}">{% trans 'Next' %} &rarr;</a></li>
+          {% endif %}
+        </ul>
+    {% endif %}
+
+    {% if queries.urlencode or page_obj.number %}
+        <div id="last_uri"    display="none" value="{{ queries.urlencode }}"></div>
+        <div id="page_number" display="none" value="{{ page_obj.number }}"></div>
+
+
+    {% endif %}
+    
 {% endblock content %}
 
 {% block extra_js %}
-  <script src="{% static 'js/imagery.js' %}"></script>
+    <script src="{% static 'js/imagery.js' %}"></script>
+    <script src="{% static 'js/imagery_map.js' %}" type="text/javascript"></script>
 {% endblock extra_js %}
