--- a/indicarprocess/catalogo/templates/catalogo/recursos.html
+++ b/indicarprocess/catalogo/templates/catalogo/recursos.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}Recursos para uso no QGIS{% endblock title %}
 
@@ -17,10 +18,10 @@
 
   <h3>Mapas</h3>
   <ul>
-    <li><a href="/media/google_map.xml">Google Maps</a></li>
-    <li><a href="/media/google_satellite.xml">Google Maps Satellite</a></li>
-    <li><a href="/media/google_terrain.xml">Google Maps Terrain</a></li>
-    <li><a href="/media/nasa_dem.xml">Nasa DEM</a></li>
-    <li><a href="/media/nasa_modis.xml">Nasa MODIS</a></li>
+    <li><a href="{% get_media_prefix %}google_map.xml">Google Maps</a></li>
+    <li><a href="{% get_media_prefix %}google_satellite.xml">Google Maps Satellite</a></li>
+    <li><a href="{% get_media_prefix %}google_terrain.xml">Google Maps Terrain</a></li>
+    <li><a href="{% get_media_prefix %}nasa_dem.xml">Nasa DEM</a></li>
+    <li><a href="{% get_media_prefix %}nasa_modis.xml">Nasa MODIS</a></li>
   </ul>
 {% endblock content %}
