Update geoserver static link

--- a/indicarprocess/catalogo/templates/catalogo/recursos.html
+++ b/indicarprocess/catalogo/templates/catalogo/recursos.html
@@ -8,10 +8,10 @@
 {% block content %}
   <h3>Catálogos</h3>
   <ul>
-    <li><a href="http://siscom.ibama.gov.br/geoserver/csr/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=csr:catalogo_landsat&outputFormat=SHAPE-ZIP">
+    <li><a href="http://siscom.ibama.gov.br/geoserver/csr/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=csr:img_grade_landsat_etm_a&outputFormat=SHAPE-ZIP">
       Shape do Catálogo Landsat
     </a></li>
-    <li><a href="http://siscom.ibama.gov.br/geoserver/csr/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=csr:catalogo_rapideye&outputFormat=SHAPE-ZIP">
+    <li><a href="http://siscom.ibama.gov.br/geoserver/csr/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=csr:img_grade_rapid_eye_a&outputFormat=SHAPE-ZIP">
       Shape do Catálogo RapidEye
     </a></li>
   </ul>
