--- a/indicarprocess/templates/base.html
+++ b/indicarprocess/templates/base.html
@@ -11,7 +11,7 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -20,8 +20,6 @@
 
     <!-- This file store project specific CSS -->
     <link href="{% static 'css/indicarprocess.css' %}" rel="stylesheet">
-    <link href="{% static 'css/bootstrap-datepicker3.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/bootstrap-slider.min.css' %}" rel="stylesheet">
 
     <!-- Use this to quickly test CSS changes in a template,
         then move to indicarprocess.css -->
@@ -61,7 +59,7 @@
               <li><a href="{% url 'imagery:user-scene-request' %}"><span class="glyphicon glyphicon-list"></span> {% trans 'My Requests' %}</a></li>
             {% endif %}
           </ul>
-          {% include 'imagery/login_menu.html' %}
+          {% include 'loginlogout/login_menu.html' %}
         </div><!--/.nav-collapse -->
 
       </div>
@@ -82,13 +80,10 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
 
     <!-- place project specific Javascript in this file -->
-    <script src="{% static 'js/bootstrap-datepicker.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap-datepicker.pt-BR.js' %}"></script>
-    <script src="{% static 'js/bootstrap-slider.min.js' %}"></script>
 
     {% block extra_js %}{% endblock extra_js %}
   </body>
